assets/css/style.css
body {
    font-family: 'Anton', sans-serif;
    overflow: hidden;
}


section h1 {
    font-size: 70px;
    position: relative;
    left: 1.5em;
    
}

h2 {
    font-size: 50px;
}




#wrapper {
    height: 166px;
    overflow: auto;
}


.jumbotron {
  background: #ffffff70;
  text-align: center;
}

.text-center{
  text-align: center !important;
  font-size: 75px;
  

}


.color-text {
    color: wheat;
}

.container{
	text-align: center;
}


.table {
  background: white;
}

td {
    text-align: left;
}

#menu-toggle {
  font-size: 20px;
}

/*@media screen and (min-width: 600px) {
  .jumbotron {
    font-size: 80px;
  }
}

@media screen and (max-width: 600px) {
  .jumbotron {
    font-size: 30px;
  }
  body {
    color: pink;
  }
}*/

/*about styles*/


.contact-label{
    display: block;
    margin: 1em 1em .25em 1em;
    padding: 0 0 0 0em;
    color: #aaa;

}

.contact-input[type="submit"]{
    display: block;
    margin: 1em 0em;
    font-size: 16px;
    padding: .5em;
    background: #d73;
    color: #fff;
    border: none;


}

.contact-input[type="text"], textarea{
    display: block;
    margin: 0 0;
    width: 25em;
    font-size: 16px;
    padding: .5em;


}

#contact {
    padding: 1em;
    font-size: 20px;
}

#contact .contact-label {
    position: relative;
}

#picture{
  border-radius: 20%;
  position: relative;
  left: 1.5em;
}

#contact{
    /* left: 15em; */
}

.containerp{
    margin-top: 0;
    margin-bottom: 1rem;
    background: #111;
    padding: 1em;
    font-size: 20px;
    border-radius: 19%;
    margin-top: 1em;
    position: relative;
    left: 5em;
}




#about {
    color:wheat;
    padding: .30em 0 .75em 0;
    text-align: center;
}

#about #contact-box{
    background-color:#eee;
    font-size: 28px;
    display: inline-block;
    padding: 2em 2em 0em;
    border-radius: 10%;
    position: relative;
    left: 3.5em;
    /* left: 8em; */
}

